# gathon

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: QUICKSTART.md  README.md  SKILL.md  analyze_results.py  benchmark_runner.py  run_benchmark.sh
benchmarks/queries/: sample_queries.json
benchmarks/results/: benchmark_src_1777842755.json  benchmark_src_1777843073.json
docs/: arch-overview.mmd  dashboard-arch.mmd  data-flow.mmd  token-optimization.mmd
graphify-out/: .graphify_incremental.json  .graphify_labels.json  .graphify_old.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
skills/: api-spec-analysis.md  build-graph.md  code-git-create-branch.md  code-optmz-graphify.md  debug-issue.md  explore-codebase.md  explore-knowledge.md  graphify-knowledge.md  refactor-safely.md  review-changes.md  review-delta.md  review-pr.md
src/gathon/: __init__.py  __main__.py  cli.py  compress.py  export.py  extract.py  hooks.py  incremental.py  packer.py  prefetch.py  prompts.py  router.py  schema.py  server.py  (+3 more)
tests/: test_adapters.py  test_breaking_changes.py  test_cli.py  test_compress.py  test_config_parser.py  test_ctp_engine.py  test_ctp_filters.py  test_ctp_hook.py  test_dedup.py  test_export.py  test_extract.py  test_hooks.py  test_incremental.py  test_memory.py  test_openapi_parser.py  test_packer.py  test_progressive.py  test_prompts.py  test_router.py  test_sandbox.py  test_schema.py  test_server.py  test_session.py  test_store.py  test_store_compress.py  test_symbols.py  test_telemetry.py  test_tokens.py
(+90 files in other folders)
